# Hydrangea

./: CMakeLists.txt  README.md
include/: ComponentArray.hpp  EntityManager.hpp  Hydrangea.hpp  Types.hpp  Window.hpp
include/Components/: Transform.hpp
include/Math/: Vec2.hpp  Vec3.hpp
src/: Main.cpp  Window.cpp  main.cpp
